@@ -37,7 +37,6 @@ npg_library_merge
            --instrument_type HiSeqX 
            --run_type        paired 
            --chemistry       HiSeqX_V1
-           --use_irods
            --local
 
 
